assets/styles.css
* {
  box-sizing: border-box;
}
body {
  margin: 0;
  padding: 0;
  width: 100vw;
  height: 100vh;
}

main {
  display: flex;
}

div.image {
  background-image: url('/assets/images/halie-west.jpg');
  width: 50%;
  height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.logo-container {
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  width: 100%;
  height: 150px;
  margin-top: 150px;
  gap: 10px;
}

.logo {
  width: 100px;
  height: 100px;
  object-fit: contain;
}
h1 {
  text-align: center;
  font-size: 6rem;
  font-family: norse;
}

.credit {
  color: rgb(220, 220, 220, 0.8);
  margin: 30px auto;
  font-size: 0.8rem;
  /* align-self: flex-end; */
}
.underline {
  text-decoration: underline;
}

.form-layout {
  width: 100%;
  background-color: rgb(247, 249, 250);
  padding-top: 50px;
}

.text-container {
  margin-bottom: 25px;
  font-family: 'Source Sans 3', 'Roboto', sans-serif;
  font-size: 1.3rem;
  font-weight: 600;
  padding: 2rem;
  inline-size: 58ch;
  line-height: 1.7rem;
}

.italic {
  font-style: italic;
}

.input-container {
  background-color: rgb(255, 255, 255);
  padding: 2rem;
  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
}

fieldset {
  border: none;
  display: flex;
  flex-direction: column;
}
legend {
  font-size: 1.3rem;
  font-weight: 700;
  margin-bottom: 20px;
}

.row {
  margin: 10px 0;
}

.item {
  display: inline-block;
  width: 250px;
  margin-right: 40px;
}

label,
input {
  display: block;
}
label {
  text-transform: uppercase;
  font-size: 0.7rem;
  font-weight: 700;
  color: rgb(81, 81, 81);
}

input {
  width: 100%;
  border: 1px solid #e5e7eb;
  border-radius: 2px;
  padding: 5px;
  transition: border 0.2s ease-in-out;
}
input[type='password']:invalid {
  border: 1px solid red;
}

input:focus {
  border: 1px solid blue;
  outline: none;
  box-shadow: 1px 4px 10px 0px rgba(0, 0, 0, 0.2);
}
.account {
  padding: 2rem;
}

button {
  background-color: #596d48;
  color: rgb(255, 255, 255);
  border: none;
  border-radius: 5px;
  padding: 10px 50px;
  font-family: 'Source Sans 3', 'Roboto', sans-serif;
  font-weight: 600;
  box-shadow: 1px 4px 10px 0px rgba(0, 0, 0, 0.2);
}

.account p {
  font-size: 1.1rem;
  font-weight: 500;
}
.account p a {
  color: #596d48;
}

